sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:20: error: 'while' expected but '}' found.
}
^AlgCombSort:24: error: Unmatched closing brace '}' ignored here
}
^